# ONScripter-EN

./: .gitignore  .gitmodules  AnimationInfo.cpp  AnimationInfo.h  BUGS  BaseReader.h  Build.md  BuildInstructions.md  CHANGES  CMakeLists.txt  CMakePresets.json  CONTIBUTING  CONTRIBUTING  DirPaths.cpp  DirPaths.h  DirectReader.cpp  DirectReader.h  DirtyRect.h  Encoding.cpp  Encoding.h  FontInfo.cpp  FontInfo.h  INSTALL  Layer.cpp  Layer.h  Linux_messagebox.cpp  MadWrapper.cpp  Makefile  Makefile.extlibs  Makefile.onscripter  Makefile.unittest  NsaReader.cpp  NsaReader.h  ONScripterLabel.cpp  ONScripterLabel.h  ONScripterLabel_animation.cpp  ONScripterLabel_command.cpp  ONScripterLabel_effect.cpp  ONScripterLabel_effect_breakup.cpp  ONScripterLabel_effect_cascade.cpp  (+40 more)
.github/workflows/: build.yml
cmake/: DependencyFinder.cmake  ResourceGenerator.cmake  TargetArch.cmake
cmake/wii/: meta.xml.in
cmake/wiiu/: meta.xml.in
extlib/: CMakeLists.txt
extlib/src/SDL-1.2.15/: Makefile.in  SDL.spec.in  configure  configure.in
extlib/src/SDL-1.2.15/build-scripts/: makedep.sh
extlib/src/SDL-1.2.15/src/thread/win32/: win_ce_semaphore.c
extlib/src/SDL_mixer-1.2.12/: Makefile.in  configure  configure.in
extlib/src/SDL_ttf-2.0.11/: SDL_ttf.c
extlib/src/libogg-1.3.5/: Makefile.am  Makefile.in  configure  configure.ac  libogg.spec.in  ltmain.sh
extlib/src/libogg-1.3.5/doc/: Makefile.in
extlib/src/libogg-1.3.5/src/: Makefile.in
extlib/src/libpng-1.6.39/: Makefile.am  Makefile.in
extlib/src/libvorbis-1.3.7/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
extlib/src/libvorbis-1.3.7/include/: Makefile.in
extlib/src/libvorbis-1.3.7/include/vorbis/: Makefile.in
extlib/src/libvorbis-1.3.7/lib/: Makefile.in
extlib/src/libvorbis-1.3.7/lib/books/: Makefile.in
extlib/src/libvorbis-1.3.7/lib/books/coupled/: Makefile.in
extlib/src/libvorbis-1.3.7/lib/books/floor/: Makefile.in
extlib/src/libvorbis-1.3.7/lib/books/uncoupled/: Makefile.in
extlib/src/libvorbis-1.3.7/lib/modes/: Makefile.in
extlib/src/libvorbis-1.3.7/m4/: Makefile.in  libtool.m4
extlib/src/libvorbis-1.3.7/vq/: Makefile.in
extlib/src/new/: freetype-2.13.3.tar.xz
extlib/src/old/SDL_ttf-2.0.8/: configure
extlib/src/old/bzip2-1.0.4/: bzlib.c
extlib/src/old/freetype-2.3.5/include/freetype/config/: ftmodule.h
extlib/src/old/libpng-1.2.24/: pngconf.h
extlib/src/old/libvorbis-1.2.0/lib/: os.h
extlib/src/patches/Ogg/: 0001-Fix-UB-reported-by-UBsan.patch  series
extlib/src/patches/SDL/: 0001-Fix-compilation-with-libX11-1.5.99.902.patch  0001-extlib-SDL-disable-installation-of-manpages.patch  0001-extlib-SDL-set-the-libtool-tag-as-appropriate.patch  0001-extlib-SDL-update-config.-guess-sub.patch  series
extlib/src/required/: README  freetype-config
extlib/src/smpeg/: MPEG.cpp  MPEG.h  MPEGaudio.h  MPEGfilter.c  MPEGsystem.cpp  smpeg.cpp  smpeg.h
extlib/src/smpeg/audio/: MPEGaudio.cpp  filter.cpp  filter_2.cpp  hufftable.cpp  mpeglayer1.cpp  mpeglayer2.cpp  mpeglayer3.cpp  mpegtoraw.cpp
extlib/src/smpeg/video/: gdith.cpp  jrevdct.cpp  readfile.cpp  vhar128.cpp  video.h
macosx/: cocoa_alertbox.h  cocoa_alertbox.mm  cocoa_alertbox_result.h  cocoa_bundle.h  cocoa_bundle.mm  cocoa_directories.h  cocoa_directories.mm  cocoa_encoding.mm  cocoa_readme.txt  ons-en.icns
macosx/English.lproj/SDLMain.nib/: keyedobjects.nib
macosx/Help/English.lproj/ONScripterHelp/: about.html  usage.html
macosx/ONScripter.xcodeproj/: project.pbxproj
macosx/SDL/: ONSApplication.h  SDLMain.h  SDLMain.m
macosx/tools_pkg/Resources/: License.rtf
msys2/: Makefile.Windows.MSYS2.i686.insani  Makefile.Windows.MSYS2.x86-64.insani  README.md  configure.insani
onscripter-en-20110628-fullsrc/: .hg_archival.txt  AnimationInfo.cpp  BaseReader.h  CHANGES  DirPaths.cpp  DirtyRect.cpp  LUAHandler.cpp  LUAHandler.h  Makefile.onscripter  ONScripterLabel_animation.cpp  ONScripterLabel_command.cpp  ONScripterLabel_effect.cpp  ONScripterLabel_effect_cascade.cpp  ONScripterLabel_file.cpp  ONScripterLabel_file2.cpp  ONScripterLabel_image.cpp  ONScripterLabel_rmenu.cpp  ONScripterLabel_text.cpp  README  SarReader.cpp  SarReader.h  ScriptHandler.cpp  graphics_blend.h  graphics_cpu.h  graphics_mmx.cpp  graphics_resize.h  graphics_sse2.h  onscripter.rc.in  resize_image.cpp  resize_image.h
onscripter-en-20110628-fullsrc/extlib/src/: README
onscripter-en-20110628-fullsrc/extlib/src/libogg-1.3.5/: Makefile.in  configure
onscripter-en-20110628-fullsrc/extlib/src/required/: libtool
onscripter-en-20110628-fullsrc/macosx/: Info.plist  ONSCocoaUIController.h  ONSCocoaUIController.mm  ONScripter.icns  cocoa_encoding.h  cocoa_modal_alert.h  cocoa_modal_alert.mm  cocoa_url.h  cocoa_url.mm
onscripter-en-20110628-fullsrc/macosx/English.lproj/SDLMain.nib/: designable.nib
onscripter-en-20110628-fullsrc/macosx/SDL/: ONSApplication.m
onscripter-en-20110628-fullsrc/macosx/tools_pkg/ONScripter_Tools.pmdoc/: 01pkgroot.xml  (+1 more)
onscripter-en-20110628-fullsrc/test/: 0.breakup.txt  0.color.txt  0.jponly.txt  0.oldmovie.txt  0.txtbtn.txt  0.whirl.txt  00.txt  README  arc.nsa
onscripter-en-20110628-fullsrc/tools/: arcmake.cpp  batchconv.cpp  conv_shared.cpp  nscdec.cpp  readme.txt  rules.txt
onscripter-en-20110628-fullsrc/tools/libgnurx/: Makefile  README.onscripter
onscripter-en-20110628-fullsrc/tools/man/: batchconv.1  ns2conv.1  ns2dec.1  nsaconv.1  nsadec.1  nscdec.1  sardec.1  sarmake.1
onscripter-en-20110628-fullsrc/win_dll/: README
test/: 0.cascade.txt  0.hana.txt  0.snow.txt  0.trvswave.txt  CMakeLists.txt  Makefile  Makefile.testlibs  registry.txt  test_BaseReader.cpp  test_DirPaths.cpp  test_DirectReader.cpp  test_Encoding.cpp  test_ShiftJISData.cpp
tools/: CMakeLists.txt  arcconv.cpp  arcdec.cpp  arcmake.cpp  conv_shared.cpp  conv_shared.h  conv_shared_jpeg.cpp  conv_shared_png.cpp  nbzdec.cpp  nscmake.cpp
tools/libgnurx/: Makefile  regex_internal.h
tools/man/: batchconv.1  nbzdec.1  ns2conv.1  ns2dec.1  ns2make.1  nsaconv.1  nsadec.1  nsamake.1  nscdec.1  nscmake.1  sarconv.1  sardec.1  sarmake.1
(+13 files in other folders)
